0.9.1(auto height change to width 100% on images to fix on ios deviceses)

--- a/Css/pathStuff.css
+++ b/Css/pathStuff.css
@@ -16,7 +16,7 @@
 .PathImages {
   display: flex;
   flex-direction: column;
-  height: auto;
+  width: 100%;
 }
 
 .AllAtributes {
